# DeepLearning

./: .gitignore  README.md  RQ4_experiment_details.md
CapStone Project/: .env.example  .gitignore  README.md  pyproject.toml  requirements-binoculars.txt  requirements-dev.txt  requirements-lora.txt  requirements-rag.txt  requirements-torch-cuda.txt  run_ai_detection.py  run_bibliographic_validation_evaluation.py  run_claimguard.py  run_crossref_baseline.py  run_evaluation.py  run_model_comparison.py  run_no_rag_baseline.py  streamlit_app.py  train_scifact_lora.py
CapStone Project/.streamlit/: config.toml
CapStone Project/apps/: __init__.py  streamlit_app.py
CapStone Project/claimguard/: __init__.py  comparison.py  config.py  interpretation.py  models.py  pipeline.py
CapStone Project/claimguard/ai_detection/: __init__.py  detector.py
CapStone Project/claimguard/claims/: __init__.py  citations.py  classifier.py
CapStone Project/claimguard/evaluation/: __init__.py  bibliographic_evaluator.py  claim_evaluator.py  evaluator.py  reference_evaluator.py  tool_comparison.py
CapStone Project/claimguard/parsing/: __init__.py  document.py  sentences.py
CapStone Project/claimguard/rag/: __init__.py  model_verifiers.py  retriever.py  sources.py  (+1 more)
CapStone Project/data/: README.md
CapStone Project/docs/: ANNOTATION_GUIDE.md  CAPSTONE_REPORT_OUTLINE.md  ClaimGuard_Capstone_Praesentation_DE.pptx  ClaimGuard_Capstone_Praesentation_DE_mit_UI_Demo.pptx  ClaimGuard_Capstone_Presentation.pptx  ClaimGuard_Praesentation_Notizen_DE.md  ClaimGuard_Presentation_Notes.md  ClaimGuard_Technical_Report.html  ClaimGuard_Technical_Report.tex  FINAL_RESULTS.md  PRESENTATION_OUTLINE.md  README.md  build_demo_presentation.ps1  generate_presentation.py  record_frontend_demo.py  translate_presentation_de.py
CapStone Project/outputs/: README.md  bad_sample_analysis.json  bad_sample_claims.csv  claim_evaluation.json  crossref_baseline_rq5.json  evaluation_lora.json  evaluation_report.json  model_comparison.json  model_comparison.md  openai_analyse.json  openai_bericht.md  report_analysis.json  rq_claim_evaluation.json
CapStone Project/scripts/: README.md  __init__.py  prepare_fastdetect_benchmark.py  run_ai_detection.py  run_ai_detection_evaluation.py  run_claim_evaluation.py  run_claimguard.py  run_model_comparison.py  run_openai_diagnostic.py  run_reference_evaluation.py  run_scifact_model_comparison.py  run_tool_comparison.py  train_scifact_lora.py
CapStone Project/tests/: test_ai_detection_evaluation.py  test_capstone_extensions.py  test_citations.py  test_claim_classifier.py  test_comparison.py  test_evaluation.py  test_fuzzy.py  test_interpretation.py  test_rag_verification.py  test_reference_parsing.py  test_scifact_comparison.py  test_smoke.py
(+133 files in other folders)
