[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claimguard"
version = "0.1.0"
description = "Academic citation integrity checker for a deep learning capstone project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.2.0",
  "rapidfuzz>=3.9.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
rag = [
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0; platform_system != 'Windows'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

