[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claimguard"
version = "0.2.0"
description = "Academic citation integrity checker for a deep learning capstone project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.2.0",
  "rapidfuzz>=3.9.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
rag = [
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0; platform_system != 'Windows'",
]
ai = [
  "torch>=2.2.0",
  "transformers>=4.44.0",
  "binoculars @ git+https://github.com/ahans30/Binoculars.git",
]
lora = [
  "torch>=2.2.0",
  "transformers>=4.44.0",
  "datasets>=2.20.0",
  "peft>=0.12.0",
  "accelerate>=0.33.0",
  "sentencepiece>=0.2.0",
]

[project.scripts]
claimguard = "run_claimguard:main"
claimguard-evaluate = "run_evaluation:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
