[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claimguard"
version = "0.2.0"
description = "Academic citation integrity checker for a deep learning capstone project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.2.0",
  "rapidfuzz>=3.9.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "python-pptx>=1.0.2"]
ui = ["streamlit>=1.41.0"]
rag = [
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0; platform_system != 'Windows'",
]
lora = [
  "torch>=2.2.0",
  "transformers>=4.44.0,<6",
  "datasets>=2.20.0,<5",
  "peft>=0.12.0,<1",
  "accelerate>=0.33.0,<2",
  "sentencepiece>=0.2.0",
  "protobuf>=5.27.0",
]

[project.scripts]
claimguard = "scripts.run_claimguard:main"
claimguard-evaluate = "scripts.run_evaluation:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["claimguard*", "scripts*", "apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
